# docs/swagger.yaml
@@ -1,20 +1,71 @@
 basePath: /
 definitions:
-  users.UsersGetAllRequest:
+  app.JobError:
     properties:
-      filter:
-        properties:
-          ids:
-            items:
-              type: string
-            type: array
-          name:
-            type: string
-        type: object
-      limit:
+      code:
+        type: string
+      description:
+        type: string
+    type: object
+  app.JobListItem:
+    properties:
+      created_at:
         type: integer
-      offset:
+      id:
+        type: string
+      payload:
+        $ref: '#/definitions/app.JobRequest'
+      result:
+        $ref: '#/definitions/app.JobResponse'
+    type: object
+  app.JobRequest:
+    properties:
+      action:
+        maxLength: 2048
+        minLength: 1
+        type: string
+      arguments:
+        items:
+          type: string
+        type: array
+      id:
+        maxLength: 100
+        minLength: 2
+        type: string
+      timeout:
+        default: 1000
         type: integer
+      type:
+        enum:
+        - embedded
+        - related
+        - absolute
+        type: string
+    required:
+    - action
+    - arguments
+    - id
+    - timeout
+    - type
+    type: object
+  app.JobResponse:
+    properties:
+      error:
+        $ref: '#/definitions/app.JobError'
+      status:
+        enum:
+        - run
+        - error
+        - finish
+        type: string
+    type: object
+  utils.HttpError:
+    properties:
+      code:
+        type: string
+      description:
+        type: string
+      validation: {}
     type: object
 host: localhost:9080
 info:
@@ -30,28 +81,49 @@ info:
   title: My API
   version: "1.0"
 paths:
-  /users:
-    get:
+  /job:
+    post:
       consumes:
       - application/json
-      description: Returns app
+      description: Returns job id
       parameters:
-      - description: Users request with filter
+      - description: Job request
         in: body
         name: request
         required: true
         schema:
-          $ref: '#/definitions/users.UsersGetAllRequest'
+          $ref: '#/definitions/app.JobRequest'
+      produces:
+      - application/json
+      responses:
+        "201":
+          description: Created
+        "409":
+          description: Conflict
+          schema:
+            $ref: '#/definitions/utils.HttpError'
+      summary: Run job
+      tags:
+      - job
+  /job/{id}:
+    get:
+      consumes:
+      - application/json
+      description: Returns job info
+      parameters:
+      - description: Job id
+        in: path
+        name: id
+        required: true
+        type: string
       produces:
       - application/json
       responses:
         "200":
           description: OK
           schema:
-            additionalProperties:
-              type: string
-            type: object
-      summary: Get app
+            $ref: '#/definitions/app.JobListItem'
+      summary: Get job
       tags:
-      - app
+      - job
 swagger: "2.0"
